--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,21 @@ img {
 }
 
 /*Поисковая строка*/
+.search-form {
+  position: relative;
+}
+
+.search-form::before {
+  content: "";
+  position: absolute;
+  top: 17px;
+  left: 0;
+  width: 16px;
+  height: 16px;
+  background-image: url(../img/icon/icon_search.svg);
+  background-repeat: no-repeat;
+  z-index: 1;
+}
 
 .search-form__input::-webkit-input-placeholder {
   color: var(--basic-black-03);
@@ -440,6 +455,7 @@ img {
 .slider {
   position: relative;
   margin-top: -82px;
+  z-index: 2;
 }
 
 .slider__item {
