--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ img {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-top: 30px;
+  margin-top: 20px;
   margin-bottom: 50px;
 }
 
@@ -264,12 +264,17 @@ img {
 .menu {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .nav-menu {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+}
+
+.nav-menu:first-child {
+  justify-content: end;
 }
 
 
@@ -564,7 +569,9 @@ img {
 }
 
 .svg-logo {
-  margin-top: -17px;
+  position: absolute;
+  top: -20px;
+  display: inline-block;
 }
 
 .menu__link,
@@ -687,7 +694,7 @@ img {
   content: "";
   position: absolute;
   top: 0;
-  right: 335px;
+  left: 225px;
   width: 20px;
   height: 20px;
   background-image: url("../img/icon/icon_plus.svg");
@@ -695,54 +702,70 @@ img {
   background-position: 0 0;
 }
 
-.link-contact {
-  margin-left: 60px;
-}
+/*.link-contact {*/
+/*  margin-left: 60px;*/
+/*}*/
 
-.link-guarantees {
-  margin-left: 25px;
-}
+/*.link-guarantees {*/
+/*  margin-left: 25px;*/
+/*}*/
 
 .menu__item--low:first-child {
   margin-right: 24px;
 }
 
 .catalog-menu__submenu {
-  display: flex;
-  margin-top: 18px;
-}
-
-.catalog-menu {
-  margin-right: 61px;
-}
-
-.catalog-menu__item {
-  margin-bottom: 20px;
-}
-
-.nav-menu__item:first-child {
-  position: relative;
   display: inline-block;
 }
 
-.nav-menu__item:first-child:hover .catalog-menu__submenu {
-  visibility: visible;
-  /*хз как сделать не могу додуматься*/
-  /*content: "";*/
-  /*position: absolute;*/
-  /*top: 20px;*/
-  /*left: -60px;*/
-  /*width: 1160px;*/
-  /*height: 146px;*/
-  /*background-color: var(--special-yellow);*/
+.catalog-menu__submenu:hover .nav-menu__advanced {
+  display: block;
+}
+
+.nav-menu__advanced {
+  width: 1160px;
+  position: absolute;
+  top: 160px;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  box-sizing: border-box;
+  background-color: var(--special-yellow);
+  padding: 10px 60px 30px;
+  display: none;
+}
+
+.nav-menu__advanced:hover .slider {
+  z-index: -1;
+}
+
+.catalog-menu {
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(3,max-content);
+  grid-template-rows: repeat(3,min-content);
+  column-gap: 61px;
+  row-gap: 20px;
+}
+
+.catalog-menu__item:nth-of-type(5) {
+  grid-column: 2 / -1;
 }
 
 .nav-menu__item:first-child:hover .slider {
   z-index: 1;
 }
 
-.catalog-menu__submenu {
-  visibility: hidden;
+.nav-menu__item:first-of-type {
+  width: 540px;
+}
+
+.nav-menu__item:nth-of-type(2) {
+  width: 159px;
+}
+
+.nav-menu__item:nth-of-type(3) {
+  width: 218px;
 }
 
 .breadcrumbs__link {
